Time is fancier, got a clock. :)